<resources>
    <string name="app_name">GradLink</string>
    <string name="facebook_app_id">914001238945724</string>
    <string name="fb_login_protocol_scheme">fb914001238945724</string>
    <string-array name="years">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string-array name="degree">
        <item>Commerce/Information Systems </item>
        <item>Information Systems </item>
        <item>Information Systems (Co-op) </item>
    </string-array>
    <string-array name="major">
        <item>Accounting</item>
        <item>Business Economics</item>
        <item>Business Strategy Econ</item>
        <item>Finance</item>
        <item>International Business</item>
        <item>Marketing</item>
        <item>Management</item>
        <item>Human Resource Management</item>
        <item>Business Law</item>
        <item>Taxation</item>
    </string-array>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="face_shape">Face Shape</string>
    <string name="hair">Hair</string>
    <string name="clothes">Clothes</string>
    <string name="jacket">Jacket</string>
    <string name="earrings">Earrings</string>
    <string name="necklace">Necklace</string>
    <string name="facial_hair">Facial Hair</string>
    <string name="tie">Tie</string>
    <string name="glasses">Glasses</string>
    <string name="title">Avatar</string>
    <string name="textView_Face">Face</string>
    <string name="textView_Hair">Hair</string>
    <string name="textView_Clothing">Clothes</string>
    <string name="textView_Jacket">Jacket</string>
    <string name="textView_Ties">Ties</string>
    <string name="textView_Accessories">Accessories</string>
    <string name="textView_Facial_Hair">Beard</string>
    <string name="textView_Glasses">Glasses</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
