<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/FGImageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/f_face_oval" />

        <ImageView
            android:id="@+id/GImageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/glasses"
            app:srcCompat="@drawable/u_glasses_aviator" />

        <ImageView
            android:id="@+id/FGImageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@+id/FGImageView1"
            android:layout_toRightOf="@+id/FGImageView1"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/f_face_oval" />

        <ImageView
            android:id="@+id/GImageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/glasses"
            app:srcCompat="@drawable/u_glasses_round" />

        <ImageView
            android:id="@+id/FGImageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/GImageView1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="531dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/f_face_oval" />

        <ImageView
            android:id="@+id/GImageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignTop="@+id/FGImageView3"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="531dp"
            android:contentDescription="@string/hair"
            app:srcCompat="@drawable/u_glasses_square" />

    </RelativeLayout>
</ScrollView>

