<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/FCImageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/f_face_oval" />

        <ImageView
            android:id="@+id/CImageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/clothes"
            app:srcCompat="@drawable/f_clothes_basic_shirt" />

        <ImageView
            android:id="@+id/FCImageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/f_face_oval" />

        <ImageView
            android:id="@+id/CImageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:contentDescription="@string/clothes"
            app:srcCompat="@drawable/f_clothes_blouse" />

        <ImageView
            android:id="@+id/FCImageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="205dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/f_face_oval" />

        <ImageView
            android:id="@+id/CImageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/FCImageView3"
            android:layout_alignParentTop="true"
            android:layout_marginTop="205dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/hair"
            app:srcCompat="@drawable/f_clothes_retro" />

        <ImageView
            android:id="@+id/FCImageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="205dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/f_face_oval" />

        <ImageView
            android:id="@+id/CImageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="205dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/clothes"
            app:srcCompat="@drawable/f_clothes_shirt" />

        <ImageView
            android:id="@+id/FCImageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="410dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/f_face_oval" />

        <ImageView
            android:id="@+id/CImageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/FCImageView3"
            android:layout_alignParentTop="true"
            android:layout_marginTop="410dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/hair"
            app:srcCompat="@drawable/f_clothes_sweater" />


    </RelativeLayout>

    </ScrollView>
