<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/MCImageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleCImageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/clothes"
            app:srcCompat="@drawable/m_clothes_shirt_basic" />

        <ImageView
            android:id="@+id/MCImageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleCImageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:contentDescription="@string/clothes"
            app:srcCompat="@drawable/m_clothes_shirt_casual" />

        <ImageView
            android:id="@+id/MCImageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="205dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleCImageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/MCImageView3"
            android:layout_alignParentTop="true"
            android:layout_marginTop="205dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/hair"
            app:srcCompat="@drawable/m_clothes_shirt_formal" />

        <ImageView
            android:id="@+id/MCImageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="205dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleCImageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="205dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/clothes"
            app:srcCompat="@drawable/m_clothes_shirt_plaid" />

        <ImageView
            android:id="@+id/MCImageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="410dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleCImageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/MCImageView3"
            android:layout_alignParentTop="true"
            android:layout_marginTop="410dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/hair"
            app:srcCompat="@drawable/m_clothes_sweater_green" />

        <ImageView
            android:id="@+id/MCImageView6"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="410dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleCImageView6"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="410dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/clothes"
            app:srcCompat="@drawable/m_clothes_sweater_grey" />


    </RelativeLayout>

</ScrollView>
