<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/MBImageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleBImageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/facial_hair"
            app:srcCompat="@drawable/m_beard_1" />

        <ImageView
            android:id="@+id/MBImageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@+id/MBImageView1"
            android:layout_toRightOf="@+id/MBImageView1"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleBImageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/hair"
            app:srcCompat="@drawable/m_beard_2" />

        <ImageView
            android:id="@+id/MBImageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/MBImageView1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="531dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleBImageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignTop="@+id/MBImageView3"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="531dp"
            android:contentDescription="@string/hair"
            app:srcCompat="@drawable/m_beard_3" />

        <ImageView
            android:id="@+id/MBImageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="205dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleBImageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="205dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/facial_hair"
            app:srcCompat="@drawable/m_beard_4" />

        <ImageView
            android:id="@+id/MBImageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="410dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleBImageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/MBImageView3"
            android:layout_alignParentTop="true"
            android:layout_marginTop="410dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/facial_hair"
            app:srcCompat="@drawable/m_beard_5" />

        <ImageView
            android:id="@+id/MBImageView6"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="410dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleBImageView6"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="405dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/facial_hair"
            app:srcCompat="@drawable/m_moustache_1" />

        <ImageView
            android:id="@+id/MBImageView7"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="615dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleBImageView7"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/MBImageView3"
            android:layout_alignParentTop="true"
            android:layout_marginTop="615dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/facial_hair"
            app:srcCompat="@drawable/m_moustache_2" />

        <ImageView
            android:id="@+id/MBImageView8"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="615dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/face_shape"
            app:srcCompat="@drawable/m_face_oval" />

        <ImageView
            android:id="@+id/MaleBImageView8"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="615dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/facial_hair"
            app:srcCompat="@drawable/m_moustache_3" />

    </RelativeLayout>
</ScrollView>

